--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "alt": "^0.17.1",
     "cheerio": "^0.19.0",
+    "react-addons-test-utils": "0.14.2",
     "sinon": "^1.15.4",
     "underscore": "^1.8.3"
   },
@@ -36,7 +37,8 @@
     "mocha": "^2.2.5"
   },
   "peerDependencies": {
-    "react": "0.13.x"
+    "react": "0.14.x",
+    "react-dom": "0.14.x"
   },
   "optionalDependencies": {
     "jsdom": "^6.1.0",
