--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "JavaScript Testing utilities for React",
   "main": "build",
+  "files": ["build"],
   "scripts": {
     "prepublish": "npm run clean && npm run build",
     "preversion": "npm run clean && npm run check",
