cache node_modules in travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,9 @@ env:
   - EXAMPLE=karma-webpack
   - EXAMPLE=jest
 sudo: false
+cache:
+  directories:
+    - node_modules
 matrix:
   fast_finish: true
   exclude:
