Fix entry point for TypeScript transpile
Though this is not react-modal library's problem, here is a tweak fix necessary for TypeScript project.

## Documents

"Untyped imports" Section:
https://www.typescriptlang.org/docs/handbook/release-notes/typescript-2-1.html

```ts
// Succeeds if `node_modules/asdf/index.js` exists
import { x } from "asdf";
```

## FYI

- Common PR ( resolved ) in other library: https://github.com/reactjs/react-modal/pull/294

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "enzyme",
   "version": "2.7.0",
   "description": "JavaScript Testing utilities for React",
-  "main": "build",
+  "main": "build/index.js",
   "scripts": {
     "prepublish": "not-in-publish || (npm run clean && npm run build && safe-publish-latest)",
     "preversion": "npm run clean && npm run check",
