Add babelify and exclude some things from the global build.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --ext js,jsx src test",
     "check": "npm run lint && npm run test:all",
     "build": "babel src --out-dir build && npm run build-global",
-    "build-global": "browserify -e build/index.js -s enzyme",
+    "build-global": "browserify -e build/index.js -s enzyme -x react/addons -x react/lib/ReactContext -x react/lib/ExecutionEnvironment -o build/global.js",
     "pretest": "npm run lint",
     "test": "npm run clean && npm run build && npm run test:only",
     "test:only": "mocha --recursive test",
@@ -70,6 +70,7 @@
     "babel-loader": "^6.2.7",
     "babel-preset-airbnb": "^2.1.1",
     "babel-register": "^6.18.0",
+    "babelify": "^7.3.0",
     "browserify": "^14.1.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.15",
