--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "object.assign": "^4.0.4",
     "object.entries": "^1.0.3",
     "object.values": "^1.0.3",
+    "prop-types": "^15.5.6",
     "uuid": "^2.0.3"
   },
   "devDependencies": {
