[api refactor] Accept multiple versions in env.js. Display some console output for feedback.

--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "test:karma": "npm run build && karma start",
     "test:env": "sh ./example-test.sh",
     "test:all": "npm run react:13 && npm run test:only && npm run react:14 && npm run test:only && npm run react:15.4 && npm run test:only && npm run react:15 && npm run test:only && npm run react:16 && npm run test:only",
-    "react:13": "npm run env -- 13",
-    "react:14": "npm run env -- 14",
-    "react:15.4": "npm run env -- 15.4",
-    "react:15": "npm run env -- 15",
-    "react:16": "npm run env -- 16",
+    "react:13": "npm run env -- react:13",
+    "react:14": "npm run env -- react:14",
+    "react:15.4": "npm run env -- react:15.4",
+    "react:15": "npm run env -- react:15",
+    "react:16": "npm run env -- react:16",
     "env": "babel-node ./env.js",
     "docs:clean": "rimraf _book",
     "docs:lint": "eslint --ext md --config .eslintrc-markdown --ignore-path .eslintignore .",
