--- a/.travis.yml
+++ b/.travis.yml
@@ -33,25 +33,9 @@ matrix:
      env: KARMA=true REACT=16
   exclude:
    - node_js: "4"
-     env: JSDOM=10 REACT=0.13
+     env: JSDOM=10
    - node_js: "4"
-     env: JSDOM=10 REACT=0.14
-   - node_js: "4"
-     env: JSDOM=10 REACT=15.4
-   - node_js: "4"
-     env: JSDOM=10 REACT=15
-   - node_js: "4"
-     env: JSDOM=10 REACT=16
-   - node_js: "4"
-     env: JSDOM=11 REACT=0.13
-   - node_js: "4"
-     env: JSDOM=11 REACT=0.14
-   - node_js: "4"
-     env: JSDOM=11 REACT=15.4
-   - node_js: "4"
-     env: JSDOM=11 REACT=15
-   - node_js: "4"
-     env: JSDOM=11 REACT=16
+     env: JSDOM=11
   allow_failures:
     - node_js: "6"
       env: KARMA=true REACT=16
@@ -61,7 +45,6 @@ env:
   - REACT=15.4
   - REACT=15
   - REACT=16
-  - JSDOM=7
   - JSDOM=8
   - JSDOM=9
   - JSDOM=10
