[dist] Set explicit default react version for jsdom travis envs

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ env:
   - REACT=15.4
   - REACT=15
   - REACT=16
-  - JSDOM=8
-  - JSDOM=9
-  - JSDOM=10
-  - JSDOM=11
+  - JSDOM=8 REACT=15
+  - JSDOM=9 REACT=15
+  - JSDOM=10 REACT=15
+  - JSDOM=11 REACT=15
