--- a/packages/enzyme-adapter-react-16/package.json
+++ b/packages/enzyme-adapter-react-16/package.json
@@ -39,7 +39,7 @@
     "object.assign": "^4.0.4",
     "object.values": "^1.0.4",
     "prop-types": "^15.5.10",
-    "react-test-renderer": "^16.0.0-0"
+    "react-test-renderer": "^16.1.1"
   },
   "peerDependencies": {
     "enzyme": "^3.0.0",
