--- a/packages/enzyme-adapter-react-renderer/package.json
+++ b/packages/enzyme-adapter-react-renderer/package.json
@@ -34,6 +34,11 @@
   "author": "Leland Richardson <leland.richardson@airbnb.com>",
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "enzyme-adapter-utils": "^1.3.0",
+    "invariant": "^2.2.4",
+    "react-is": "^16.3.2",
+    "react-reconciler": "^0.7.0",
     "react-test-renderer": "^16.3.2"
   },
   "peerDependencies": {
