--- a/packages/enzyme-adapter-react-renderer/package.json
+++ b/packages/enzyme-adapter-react-renderer/package.json
@@ -36,10 +36,17 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "enzyme-adapter-utils": "^1.3.0",
+    "has": "^1.0.1",
     "invariant": "^2.2.4",
+    "is-subset": "^0.1.1",
+    "lodash": "^4.17.4",
+    "object.entries": "^1.0.4",
+    "object.values": "^1.0.4",
+    "object-is": "^1.0.1",
     "react-is": "^16.3.2",
     "react-reconciler": "^0.7.0",
-    "react-test-renderer": "^16.3.2"
+    "react-test-renderer": "^16.3.2",
+    "rst-selector-parser": "^2.2.3"
   },
   "peerDependencies": {
     "enzyme": "^3.0.0",
