Enable Gitbook search plugin

--- a/package.json
+++ b/package.json
@@ -78,12 +78,13 @@
     "eslint-plugin-markdown": "^1.0.0-rc.0",
     "eslint-plugin-react": "^7.11.1",
     "espree": "^4.1.0",
-    "gitbook-cli": "^1.0.1",
+    "gitbook-cli": "^2.3.2",
     "gitbook-plugin-anchors": "^0.7.1",
     "gitbook-plugin-codeblock-disable-glossary": "0.0.1",
     "gitbook-plugin-collapsible-menu": "^1.0.3",
     "gitbook-plugin-edit-link": "^2.0.2",
     "gitbook-plugin-github": "^2.0.0",
+    "gitbook-plugin-search": "^2.2.1",
     "glob-gitignore": "^1.0.9",
     "in-publish": "^2.0.0",
     "istanbul": "^1.0.0-alpha.2",
