turn off linebreak-style

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "react/no-find-dom-node": 1,
     "import/first": 0,
     "max-len": 0,
+    "linebreak-style": 0
   },
   "overrides": [
     { // things that run in older envs, without babel
