[meta] Format all `.babelrc` files to off warning

--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,8 @@
 {
   "presets": ["airbnb"],
   "plugins": [
-    ["transform-replace-object-assign", { "moduleSpecifier": "object.assign" }],
+    ["transform-replace-object-assign", { "moduleSpecifier": "object.assign" }]
   ],
-  ignore: [
-    "packages/enzyme-test-suite/test/_helpers/untranspiled*",
-  ],
-  sourceMaps: "both",
+  "ignore": ["packages/enzyme-test-suite/test/_helpers/untranspiled*"],
+  "sourceMaps": "both"
 }
