--- a/packages/enzyme-adapter-react-helper/.babelrc
+++ b/packages/enzyme-adapter-react-helper/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["airbnb"],
   "plugins": [
     ["transform-replace-object-assign", { "moduleSpecifier": "object.assign" }],
-    ["add-module-exports"],
+    ["add-module-exports"]
   ],
-  sourceMaps: "both",
+  "sourceMaps": "both"
 }
