--- a/packages/enzyme/.babelrc
+++ b/packages/enzyme/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": ["airbnb"],
   "plugins": [
-    ["transform-replace-object-assign", { "moduleSpecifier": "object.assign" }],
+    ["transform-replace-object-assign", { "moduleSpecifier": "object.assign" }]
   ],
-  sourceMaps: "both",
+  "sourceMaps": "both"
 }
