[Tests] migrate tests to Github Actions

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "lint": "lerna exec --parallel 'npm run lint -- --quiet'",
     "lint:root": "eslint . --ext=js,md,jsx --ignore-pattern=packages/ --ignore-path .eslintignore",
     "check": "lerna run lint && npm run test:all",
-    "prebuild": "npm run clean",
     "build": "lerna run build",
     "build:watch": "lerna run --parallel watch",
     "pretest": "lerna run lint",
@@ -96,6 +95,8 @@
     "npm": "gist:9cdb687f3806f8e6cb8a365d0b7840eb",
     "nyc": "^10.3.2",
     "prop-types": "^15.7.2",
+    "react": "*",
+    "react-dom": "*",
     "rimraf": "^2.7.1",
     "safe-publish-latest": "^1.1.4",
     "semver": "^6.3.0",
