--- a/packages/enzyme-adapter-react-16.2/package.json
+++ b/packages/enzyme-adapter-react-16.2/package.json
@@ -66,6 +66,8 @@
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "in-publish": "^2.0.1",
+    "react": "~16.2",
+    "react-dom": "~16.2",
     "rimraf": "^2.7.1",
     "safe-publish-latest": "^1.1.4"
   }
