--- a/packages/enzyme-adapter-react-13/package.json
+++ b/packages/enzyme-adapter-react-13/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "in-publish": "^2.0.1",
+    "react": "^0.13.0",
     "rimraf": "^2.7.1",
     "safe-publish-latest": "^1.1.4"
   }
