--- a/packages/enzyme-adapter-react-15.4/package.json
+++ b/packages/enzyme-adapter-react-15.4/package.json
@@ -65,6 +65,9 @@
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "in-publish": "^2.0.1",
+    "react": "15.0.0-0 - 15.4.x",
+    "react-dom": "15.0.0-0 - 15.4.x",
+    "react-addons-test-utils": "15.0.0-0 - 15.4.x",
     "rimraf": "^2.7.1",
     "safe-publish-latest": "^1.1.4"
   }
