--- a/packages/enzyme-adapter-utils/package.json
+++ b/packages/enzyme-adapter-utils/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "in-publish": "^2.0.1",
+    "react": "0.13.x || 0.14.x || ^15.0.0-0 || ^16.0.0-0",
     "rimraf": "^2.7.1",
     "safe-publish-latest": "^1.1.4"
   }
