--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "JavaScript Testing utilities for React",
   "homepage": "https://enzymejs.github.io/enzyme/",
   "scripts": {
+    "clean-node-modules": "rm -rf node_modules/{*,.bin,.package-lock.json} && rm -rf packages/*/node_modules/{*,.bin,.package-lock.json}",
     "postinstall": "[ -n \"${TRAVIS-}\" ] || (npm link npm && lerna bootstrap)",
     "prepublish": "not-in-publish || (npm run build && safe-publish-latest)",
     "preversion": "npm run clean && npm run check",
