--- a/packages/enzyme-adapter-react-helper/package.json
+++ b/packages/enzyme-adapter-react-helper/package.json
@@ -11,7 +11,8 @@
     "prebuild": "npm run clean",
     "build": "babel --source-maps=both src --out-dir build",
     "watch": "npm run build -- -w",
-    "prepublish": "not-in-publish || (npm run build && safe-publish-latest && cp ../../{LICENSE,README}.md ./)"
+    "prepublishOnly": "npm run build && safe-publish-latest && cp ../../{LICENSE,README}.md ./",
+    "prepublish": "not-in-publish || npm run prepublishOnly"
   },
   "bin": {
     "enzyme-adapter-react-install": "./build/enzyme-adapter-react-install.js"
@@ -56,7 +57,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "in-publish": "^2.0.1",
     "react": "0.13.x || 0.14.x || ^15.0.0-0 || ^16.0.0-0 || ^16.3.0-0 || ^16.4.0-0",
-    "safe-publish-latest": "^1.1.4"
+    "safe-publish-latest": "^2.0.0"
   },
   "peerDependencies": {
     "enzyme": "^3.0.0",
