--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,10 @@
   "presets": ["airbnb"],
   "plugins": [
     ["transform-replace-object-assign", { "moduleSpecifier": "object.assign" }],
+    ["add-module-exports"],
   ],
-  ignore: [
+  "ignore": [
     "packages/enzyme-test-suite/test/_helpers/untranspiled*",
   ],
-  sourceMaps: "both",
+  "sourceMaps": "both",
 }
