--- a/packages/enzyme-adapter-utils/.babelrc
+++ b/packages/enzyme-adapter-utils/.babelrc
@@ -4,6 +4,7 @@
   ],
   "plugins": [
     ["transform-replace-object-assign", { "moduleSpecifier": "object.assign" }],
+    ["add-module-exports"],
   ],
   "sourceMaps": "both",
 }
