--- a/packages/enzyme-example-mocha/.babelrc
+++ b/packages/enzyme-example-mocha/.babelrc
@@ -4,5 +4,6 @@
   ],
   "plugins": [
     ["transform-replace-object-assign", { "moduleSpecifier": "object.assign" }],
+    ["add-module-exports"],
   ],
 }
