--- a/packages/enzyme-example-mocha/package.json
+++ b/packages/enzyme-example-mocha/package.json
@@ -20,6 +20,7 @@
     "@babel/cli": "^7.15.4",
     "@babel/core": "^7.15.5",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-transform-replace-object-assign": "^2.0.0",
     "babel-preset-airbnb": "^4.5.0",
     "eslint": "^7.32.0",
