[eslint] switch to `@babel/eslint-parser`, fix linting

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,17 @@
   "env": {
     "node": true,
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
+  "ignorePatterns": [
+    "/build",
+    "_book",
+    "packages/*/build/",
+    // Temporarily copied
+    "packages/*/LICENSE.md",
+    "packages/enzyme/README.md",
+    "packages/enzyme-adapter-react-*/README.md",
+    "packages/enzyme-adapter-utils*/README.md",
+  ],
   "rules": {
     "id-length": 0,
     "react/no-find-dom-node": 1,
@@ -23,43 +33,45 @@
           "devDependencies": true,
         }],
         "comma-dangle": [2, {
-          arrays: "always-multiline",
-          objects: "always-multiline",
-          imports: "always-multiline",
-          exports: "always-multiline",
-          functions: "ignore",
+          "arrays": "always-multiline",
+          "objects": "always-multiline",
+          "imports": "always-multiline",
+          "exports": "always-multiline",
+          "functions": "ignore",
         }],
         "strict": [2, "safe"],
         "prefer-destructuring": 0,
         "prefer-template": 0,
       },
       "parserOptions": {
-        sourceType: "script",
+        "sourceType": "script",
       },
     },
     {
       "files": [
-        "*.md",
         "**/*.md",
+        "**/*.md/**"
       ],
-      "plugins": [
-        "markdown"
-      ],
+      "extends": ["plugin:markdown/recommended"],
       "rules": {
         "class-methods-use-this": 0,
-        "import/no-unresolved": 0,
-        "import/no-extraneous-dependencies": 0,
         "import/extensions": 0,
+        "import/no-extraneous-dependencies": 0,
+        "import/no-unresolved": 0,
+        "import/prefer-default-export": 0,
         "max-len": 0,
-        "no-unused-vars": 0,
         "no-console": 0,
         "no-undef": 0,
-        "react/react-in-jsx-scope": 0,
+        "no-unused-vars": 0,
         "react/jsx-filename-extension": 0,
-        "react/jsx-no-undef": 0,
-        "react/no-multi-comp": 0,
-        "react/jsx-one-expression-per-line": 0,
         "react/jsx-fragments": 0,
+        "react/jsx-no-undef": 0,
+        "react/jsx-no-useless-fragment": 0,
+        "react/jsx-one-expression-per-line": 0,
+        "react/no-multi-comp": 0,
+        "react/no-unknown-property": 0,
+        "react/no-unused-class-component-methods": 0,
+        "react/react-in-jsx-scope": 0,
       },
     },
   ],
