--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "lerna run clean",
     "prelint": "npm run lint:root",
     "lint": "lerna exec --parallel 'npm run lint -- --quiet'",
-    "lint:root": "eslint . --ext=js,md,jsx --ignore-pattern=packages/ --ignore-path .eslintignore",
+    "lint:root": "eslint . --ext=js,md,jsx --ignore-pattern=packages/",
     "check": "lerna run lint && npm run test:all",
     "prebuild": "npm run clean",
     "build": "lerna run build",
@@ -62,20 +62,20 @@
   "devDependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/node": "^7.19.1",
     "@babel/register": "^7.18.9",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-transform-replace-object-assign": "^2.0.0",
     "babel-preset-airbnb": "^4.5.0",
     "chai": "^4.3.4",
-    "eslint": "^8.24.0",
+    "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-markdown": "^3.0.0",
-    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gitbook-cli": "^1.0.1",
     "gitbook-plugin-anchors": "^0.7.1",
