--- a/packages/enzyme-test-suite/.eslintrc
+++ b/packages/enzyme-test-suite/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": "airbnb",
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "root": true,
+  "ignorePatterns": ["build/"],
   "env": {
     "mocha": true,
   },
@@ -25,6 +26,7 @@
     "react/no-did-mount-set-state": 0,
     "react/no-will-update-set-state": 0,
     "react/no-multi-comp": 0,
+    "react/no-unknown-property": 0,
     "react/prefer-es6-class": 0,
     "react/prefer-stateless-function": 0,
     "react/prop-types": 0,
