--- a/packages/enzyme-adapter-react-16.3/.eslintrc
+++ b/packages/enzyme-adapter-react-16.3/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": "airbnb",
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "root": true,
+  "ignorePatterns": ["build/"],
   "rules": {
     "max-len": 0,
     "react/no-deprecated": 0,
