--- a/packages/enzyme/.eslintrc
+++ b/packages/enzyme/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": "airbnb",
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "root": true,
+  "ignorePatterns": ["build/"],
   "env": {
     "node": true,
     "mocha": true
