--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ matrix:
           name: build
           paths:
             - ./
-      node_js: "lts/*"
+      node_js: "lts/gallium"
       env:
       install:
         - 'npm install'
@@ -36,7 +36,7 @@ matrix:
         - 'npx lerna bootstrap'
       script:
         - 'npx lerna run build'
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: LINT=true
       stage: test
     - node_js: "8"
@@ -45,37 +45,37 @@ matrix:
     - node_js: "6"
       env: REACT=16
       stage: test
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=16.8.5 RENDERER=16.8.5
       stage: test
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=16.8.5 RENDERER=16.8.3
       stage: test
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=16.8.3
       stage: test
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=16.8 RENDERER=16.7
       stage: test
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=16.7 RENDERER=16.8
       stage: test
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=16.7 RENDERER=16.7
       stage: test
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=16.3 ADAPTER=16
       stage: test
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=15.3
       stage: test
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=15.2
       stage: test
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=15.1
       stage: test
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=15.0
       stage: test
     - node_js: "6"
@@ -104,9 +104,9 @@ matrix:
       env: KARMA=true REACT=15
     - node_js: "6"
       env: KARMA=true REACT=16
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=16.8.5 RENDERER=16.8.3
-    - node_js: "lts/*"
+    - node_js: "lts/gallium"
       env: REACT=16.8 RENDERER=16.7
   exclude:
     - node_js: "6"
