[*] [meta] use `npmignore` to autogenerate an npmignore file

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ packages/*/LICENSE.md
 packages/enzyme/README.md
 packages/enzyme-adapter-react-*/README.md
 packages/enzyme-adapter-utils*/README.md
+
+.npmignore
