--- a/packages/enzyme-shallow-equal/package.json
+++ b/packages/enzyme-shallow-equal/package.json
@@ -11,7 +11,7 @@
     "prebuild": "npm run clean",
     "build": "babel --source-maps=both src --out-dir build",
     "watch": "npm run build -- -w",
-    "prepublishOnly": "npm run build && safe-publish-latest && cp ../../{LICENSE,README}.md ./",
+    "prepublishOnly": "npm run build && safe-publish-latest && cp ../../LICENSE.md ./",
     "prepublish": "not-in-publish || npm run prepublishOnly"
   },
   "repository": {
