--- a/packages/enzyme/package.json
+++ b/packages/enzyme/package.json
@@ -44,7 +44,7 @@
     "cheerio": "=1.0.0-rc.3",
     "enzyme-shallow-equal": "^1.0.5",
     "function.prototype.name": "^1.1.6",
-    "has": "^1.0.3",
+    "hasown": "^2.0.0",
     "html-element-map": "^1.3.1",
     "is-boolean-object": "^1.1.2",
     "is-callable": "^1.2.7",
