--- a/packages/enzyme-adapter-react-16/package.json
+++ b/packages/enzyme-adapter-react-16/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "enzyme-adapter-utils": "^1.14.1",
     "enzyme-shallow-equal": "^1.0.5",
-    "has": "^1.0.3",
+    "hasown": "^2.0.0",
     "object.assign": "^4.1.5",
     "object.values": "^1.1.7",
     "prop-types": "^15.8.1",
