--- a/packages/enzyme-adapter-utils/package.json
+++ b/packages/enzyme-adapter-utils/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "airbnb-prop-types": "^2.16.0",
     "function.prototype.name": "^1.1.6",
-    "has": "^1.0.3",
+    "hasown": "^2.0.0",
     "object.assign": "^4.1.5",
     "object.fromentries": "^2.0.7",
     "prop-types": "^15.8.1",
