--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@babel/core": "^7.23.9",
     "@babel/eslint-parser": "^7.23.10",
     "@babel/node": "^7.23.9",
+    "@babel/runtime": "^7.28.4",
     "@babel/register": "^7.23.7",
     "babel-loader": "^8.2.2",
     "babel-plugin-add-module-exports": "^1.0.4",
