[deps] pin `@babel/node` due to a breaking change in a minor

--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.4",
     "@babel/eslint-parser": "^7.28.4",
-    "@babel/node": "^7.28.0",
-    "@babel/runtime": "^7.28.4",
+    "@babel/node": "~7.24.8",
     "@babel/register": "^7.28.3",
+    "@babel/runtime": "^7.28.4",
     "babel-loader": "^8.2.2",
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-transform-replace-object-assign": "^2.0.0",
